Retrotranslator Changelog
=================================

  - Fixed a bug: cannot read annotations when using "-reflection safe".  

1.2.6 (2008-02-29)
---------------------------------
  - The -embed option does not require the -destjar or -destdir options.
  - Fixed a bug introduced in 1.2.5. All hyphens in file and directory names were replaced with
    dollar signs in advanced mode or when the Retrotranslator.fixHyphen option was specified.

1.2.5 (2008-02-26)
---------------------------------
  - Added support for generics and annotations on the Android platform.
  - Added options -reflection and -stripannot.

1.2.4 (2008-01-28)
---------------------------------
  - Added support for Java 5.0 API on J2SE 1.3.
  - Fixed a bug in translation of inner classes for Java 1.3 and earlier.
  - Added a workaround for a bug #4776385 in Sun JDK 1.2.2 for Windows.
  - Fixed a bug: translated jar files didn't contain directory entries.
  - Added support for java.lang.reflect.Member.isSynthetic().
  - Added support for java.math.BigDecimal.divide(BigDecimal).
  - Added support for the java.lang.Math methods: cbrt(double), cosh(double), expm1(double),
    log10(double), log1p(double), signum(double), signum(float), sinh(double), tanh(double).
  - Added support for UnsupportedOperationException(String, Throwable), UnsupportedOperationException(Throwable).

1.2.3 (2007-10-28)
---------------------------------
  - Basic support for Java 1.1, 1.2, and 1.3.
  - Backports are loaded using the classpath option.
  - New option -smart to make backports inheritable.
  - Support for Java 5 methods of java.util.Properties.
  - Support for Java 5 methods of javax.net.ssl.HttpsURLConnection.
  - Support for SecurityException(String, Throwable), SecurityException(Throwable).
  - Limited support for java.lang.Thread.getState() and java.lang.Thread.getAllStackTraces().
  - Limited support for Java 5 methods of java.net.URLConnection and java.net.HttpURLConnection.